--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
     Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
   width: 300px;
-  height: 250px;
+  height: 300px;
   padding-bottom: 10px;
   background: linear-gradient(
     to right,
@@ -79,4 +79,10 @@ button {
 .minutes {
   font-size: larger;
   font-weight: bolder;
+}
+
+.start-btn {
+  border-radius: 5px;
+  font-size: x-large;
+  margin-bottom: 10px;
 }
