--- a/style.css
+++ b/style.css
@@ -1,27 +1,34 @@
-html {
+:root {
+  --border-color: #5900ff;
+  --main-background-color: #e2e1e493;
+
+  --picker-background-color: #5900ff62;
+  --button-background-color: #529ff7e3;
+
+  --header-color: #0077ffe3;
+}
+
+html,
+:root {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  border: rgb(89, 0, 255) 3px solid;
+  border: var(--border-color) 3px solid;
   font-family: "ArialRounded", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
   width: 300px;
   height: 300px;
   padding-bottom: 10px;
-  background: linear-gradient(
-    to right,
-    rgba(89, 0, 255, 0),
-    rgba(0, 119, 255, 0.055)
-  );
+  background-color: var(--main-background-color);
 }
 
 h1,
 h2 {
   margin: 0;
-  color: rgba(0, 119, 255, 0.89);
+  color: var(--header-color);
 }
 
 h1 {
@@ -31,11 +38,11 @@ h1 {
 
 button {
   width: 70%;
-  background-color: rgba(82, 159, 247, 0.89);
+  background-color: var(--button-background-color);
   border-radius: 30px;
   cursor: pointer;
   border: 0;
-  box-shadow: 0px 0px 1px 1px rgb(89, 0, 255);
+  box-shadow: 0px 0px 1px 1px var(--border-color);
 }
 
 .container {
@@ -60,8 +67,8 @@ button {
 }
 
 .time-picker {
-  background-color: rgba(89, 0, 255, 0.384);
-  box-shadow: 0px 2px 1px 1px rgb(89, 0, 255);
+  background-color: var(--picker-background-color);
+  box-shadow: 0px 2px 1px 1px var(--border-color);
   cursor: pointer;
   padding-left: 2px;
   padding-right: 2px;
@@ -69,11 +76,12 @@ button {
   font-size: 3rem;
 }
 .time-picker:hover {
-  background-color: rgba(89, 0, 255, 0.425);
-  box-shadow: 0px 1px 1px 1px rgb(89, 0, 255);
+  filter: brightness(95%);
+  box-shadow: 0px 1px 1px 1px var(--border-color);
 }
-.time-picker:active {
-  background-color: rgba(89, 0, 255, 0.479);
+
+.picked-time {
+  background-color: var(--button-background-color);
 }
 
 .minutes {
@@ -84,5 +92,6 @@ button {
 .start-btn {
   border-radius: 5px;
   font-size: x-large;
+  font-weight: 600;
   margin-bottom: 10px;
 }
