--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ button {
 
 .picked-time {
   background-color: var(--button-background-color);
+  box-shadow: 0px 3px 1px 1px var(--border-color);
 }
 
 .minutes {
@@ -94,4 +95,13 @@ button {
   font-size: x-large;
   font-weight: 600;
   margin-bottom: 10px;
+  box-shadow: 0px 1px 1px 1px var(--border-color);
+}
+
+.start-btn:hover {
+  filter: brightness(95%);
+}
+
+.start-btn:active {
+  box-shadow: 1px 1px 1px 1px var(--border-color);
 }
